@@ -19,6 +19,7 @@
     <includeDependencies package="." />
 
     <include package=".browser" />
+    <include package=".upgrades" />
 
     <utility
         provides=".userdataschema.IEnhancedUserDataSchema"
