@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-    <version>1</version>
+    <version>0301</version>
     <dependencies>
         <dependency>profile-plone.app.registry:default</dependency>
     </dependencies>
